--- a/styles/index.css
+++ b/styles/index.css
@@ -12,8 +12,124 @@
 
 @layer component {
   .main-container{
-    @apply lg:flex  lg:w-7/8 lg:h-[75vh] lg:mx-auto;
+    @apply lg:flex lg:w-7/8 lg:h-[75vh] lg:mx-auto;
   }
+
+  .icon {
+    @apply text-custom-blue
+  }
+
+  .clip-container {
+
+  }
+
+  /* Start header styles */
+
+  .nav{
+    @apply lg:flex lg:flex-col lg:gap-5 lg:bg-[url("https://res.cloudinary.com/dnzgln8ma/image/upload/v1749065728/peomgvdvr5vvjdhz4dta.png")]
+    lg:bg-cover lg:bg-center lg:h-110 lg:text-white
+  }
+
+  .top-nav{
+    @apply lg:flex lg:items-center lg:justify-center lg:gap-5 text-2xl;
+  }
+
+  .inner-nav{
+    @apply lg:flex lg:items-center lg:justify-center lg:gap-5;
+  }
+
+  .link{
+    @apply transition duration-300 ease-in-out hover:text-custom-hover-white lg:text-shadow-lg;
+  }
+
+  /* End header styles */
+
+  /* Start home page */
+  .search-form {
+    @apply bg-inner-container lg:w-[60%] mx-auto lg:mt-[-5rem]
+    flex flex-col items-center lg:p-[2rem] rounded-xl gap-[1rem]
+    shadow-2xl;
+  }
+
+  .form {
+    @apply w-full flex justify-center  flex-wrap gap-[1rem];
+  }
+
+  .search-button{
+    @apply bg-custom-blue hover:bg-custom-hover-blue cursor-pointer
+    text-white border-none lg:px-[20px] lg:py-[10px] rounded-xl transition
+    duration-300 ease-in-out lg:w-[50%];
+  }
+
+  .home-item-card{
+    @apply flex flex-wrap justify-center lg:w-7/8 mx-auto lg:gap-5;
+  }
+
+  .card-container{
+    @apply flex flex-col justify-center items-center
+     lg:w-[25%] lg:h-fit;
+  }
+
+  .card-text{
+    @apply lg:p-3 bg-custom-gray rounded-b-xl shadow-lg
+    transition duration-300 ease-in-out group-hover:bg-custom-hover-gray;
+  }
+  /* End home page */
+
+  /* Start Listings Page Result */
+
+  .listings-page-container{
+    @apply flex flex-col lg:gap-5;
+  }
+
+  .save-filter-button{
+    @apply shadow-lg bg-custom-blue hover:bg-custom-hover-blue
+    text-custom-white hover:text-custom-hover-white cursor-pointer lg:p-2 rounded-lg
+    transition duration-300 ease-in-out;
+  }
+
+  .listing-container{
+    @apply bg-custom-gray hover-transition flex lg:w-[70%] h-fit
+    mx-auto rounded-2xl hover:bg-custom-hover-gray shadow-lg;
+  }
+
+  .intro-info{
+    @apply w-full p-2;
+  }
+
+  .title-container{
+    @apply flex justify-between lg:h-[20%];
+  }
+
+  .info-container{
+    @apply flex flex-col justify-between lg:h-[80%] w-full;
+  }
+
+  .stats-container{
+    @apply flex lg:gap-2 flex-wrap;
+  }
+
+  .initial-description-container{
+    @apply lg:h-[3rem] overflow-hidden text-dimgray;
+  }
+
+  .button-selector-container{
+    @apply flex flex-col items-center justify-center lg:gap-5 mt-5;
+  }
+
+  .button-select{
+    @apply flex items-center bg-custom-blue text-custom-white border-0 px-[0.5rem] py-[0.5rem]
+    cursor-pointer hover-transition hover:bg-custom-hover-blue;
+  }
+
+  /* End Listings Page Result/
+
+  /* Start footer */
+    .footer{
+      @apply bg-custom-gray w-full lg:h-[10rem] lg:mt-[5rem] lg:border-t-[2px] border-t-custom-blue;
+    }
+  /* End footer */
+
   /* Start chat page styles */
   .inner-chat-container{
     @apply lg:flex lg:h-[90%] lg:w-full lg:gap-5;
@@ -42,7 +158,7 @@
   }
 
   .chat-list-holder{
-    @apply lg:overflow-y-scroll lg:h-[100%] ;
+    @apply lg:overflow-y-scroll lg:h-[100%];
   }
 
   .selected-chat{
@@ -78,8 +194,15 @@
   --color-inner-text: #9098a6;
   --color-divider-component: #8b8b8b;
   --color-other-chatter-gray: #c2c5c8;
+  --color-custom-hover-white: #EBEBEB;
+  --color-dimgray: #696969;
 }
 
 @utility flex-start {
   @apply flex gap-1.5 ml-10 mt-2 mb-2;
 }
+
+@utility hover-transition {
+  @apply transition duration-300 ease-in-out
+}
+
