--- a/styles/index.css
+++ b/styles/index.css
@@ -23,15 +23,19 @@
     @apply text-center text-4xl;
   }
 
+  .selected{
+    @apply border-2 border-red-500
+  }
+
   /* Start header styles */
 
-  .nav{
-    @apply lg:flex lg:flex-col lg:gap-5 lg:bg-[url("https://res.cloudinary.com/dnzgln8ma/image/upload/v1749065728/peomgvdvr5vvjdhz4dta.png")]
+  .header{
+    @apply lg:flex lg:flex-col lg:bg-[url("https://res.cloudinary.com/dnzgln8ma/image/upload/v1749065728/peomgvdvr5vvjdhz4dta.png")]
     lg:bg-cover lg:bg-center lg:h-110 lg:text-white
   }
 
   .top-nav{
-    @apply lg:flex lg:items-center lg:justify-center lg:gap-5 text-2xl;
+    @apply lg:flex lg:items-center lg:justify-center lg:gap-5 text-2xl drop-shadow-[0_0_2px_black];
   }
 
   .inner-nav{
@@ -180,8 +184,24 @@
   }
 
   .double-el-data{
-    @apply font-bold text-lg
+    @apply font-bold text-lg;
   }
+
+  /* Start Create Listing */
+
+  .create-listing-container{
+    @apply bg-custom-gray rounded-2xl lg:w-[70%] lg:mt-5 mx-auto
+    flex flex-col lg:gap-5 lg:p-5 shadow-2xl;
+  }
+
+  .create-listing-form{
+    @apply w-full lg:grid lg:grid-cols-4 lg:grid-rows-[auto_auto_15rem_auto] lg:gap-4;
+  }
+
+  .create-col{
+    @apply flex flex-col items-center;
+  }
+  /* End Create Listing*/
 
   /* End Favorite Filters */
 
