--- a/styles/index.css
+++ b/styles/index.css
@@ -27,6 +27,17 @@
     @apply border-2 border-red-500
   }
 
+
+  /* Start Notification */
+
+  .notification-container{
+    @apply bg-custom-gray lg:w-[40rem] lg:h-[10rem] lg:fixed lg:top-20
+    lg:p-5 flex flex-col items-center justify-center lg:gap-2
+    rounded-2xl shadow-2xl left-1/2 -translate-x-1/2;
+  }
+
+  /* End Notification */
+
   /* Start header styles */
 
   .header{
@@ -50,13 +61,13 @@
 
   /* Start home page */
   .search-form {
-    @apply bg-inner-container lg:w-[60%] mx-auto lg:mt-[-5rem]
+    @apply bg-inner-container lg:w-[70%] mx-auto lg:mt-[-5rem]
     flex flex-col items-center lg:p-[2rem] rounded-xl gap-[1rem]
     shadow-2xl;
   }
 
   .form {
-    @apply w-full flex justify-center  flex-wrap gap-[1rem];
+    @apply w-full grid grid-cols-4 gap-5;
   }
 
   .search-button{
@@ -187,6 +198,8 @@
     @apply font-bold text-lg;
   }
 
+  /* End Favorite Filters */
+
   /* Start Create Listing */
 
   .create-listing-container{
@@ -201,9 +214,15 @@
   .create-col{
     @apply flex flex-col items-center;
   }
+
   /* End Create Listing*/
 
-  /* End Favorite Filters */
+  /* Start Edit Listing */
+    .edit-listing-container{
+      @apply lg:w-[90%] mx-auto flex flex-col gap-5;
+    }
+
+  /* End Edit Listing */
 
   /* Start footer */
     .footer{
