--- a/styles/index.css
+++ b/styles/index.css
@@ -82,7 +82,7 @@
 
   .card-container{
     @apply flex flex-col justify-center items-center
-     lg:w-[25%] lg:h-fit;
+     lg:w-[25%];
   }
 
   .card-text{
