--- a/styles/index.css
+++ b/styles/index.css
@@ -33,7 +33,7 @@
   .notification-container{
     @apply bg-custom-gray lg:w-[40rem] lg:h-[10rem] lg:fixed lg:top-20
     lg:p-5 flex flex-col items-center justify-center lg:gap-2
-    rounded-2xl shadow-2xl left-1/2 -translate-x-1/2;
+    rounded-2xl shadow-2xl left-1/2 -translate-x-1/2 z-10;
   }
 
   /* End Notification */
@@ -171,7 +171,7 @@
   }
 
   .additional-info{
-    @apply bg-custom-gray lg:w-[70%] lg:h-[15rem] mx-auto rounded-lg shadow-2xl;
+    @apply bg-custom-gray lg:w-[70%]  mx-auto rounded-lg shadow-2xl;
   }
 
   /* End Individual Listing */
